--- a/mods/ae2.pw.toml
+++ b/mods/ae2.pw.toml
@@ -1,13 +1,13 @@
 name = "Applied Energistics 2"
-filename = "appliedenergistics2-fabric-12.9.3.jar"
+filename = "appliedenergistics2-fabric-15.0.5-beta.jar"
 side = "both"
 
 [download]
-url = "https://cdn.modrinth.com/data/XxWD5pD3/versions/COba8tGt/appliedenergistics2-fabric-12.9.3.jar"
+url = "https://cdn.modrinth.com/data/XxWD5pD3/versions/TKhjxSIB/appliedenergistics2-fabric-15.0.5-beta.jar"
 hash-format = "sha1"
-hash = "45434bea81c13212c5a4842cfee9e70c97ad1716"
+hash = "af5f126d73011bff92bb9515647e57184aed8515"
 
 [update]
 [update.modrinth]
 mod-id = "XxWD5pD3"
-version = "COba8tGt"
+version = "TKhjxSIB"
