--- a/mods/applied-energistics-2-wireless-terminals.pw.toml
+++ b/mods/applied-energistics-2-wireless-terminals.pw.toml
@@ -1,13 +1,13 @@
 name = "Applied Energistics 2 Wireless Terminals"
-filename = "AE2WTLib-12.8.5.jar"
+filename = "ae2wtlib-15.0.1-beta.jar"
 side = "both"
 
 [download]
-url = "https://cdn.modrinth.com/data/pNabrMMw/versions/UtqbMyTo/AE2WTLib-12.8.5.jar"
+url = "https://cdn.modrinth.com/data/pNabrMMw/versions/WTEwHwE4/ae2wtlib-15.0.1-beta.jar"
 hash-format = "sha1"
-hash = "8e06e26e405a853f1a0fc0d20599ae55657b0ed0"
+hash = "8217aa4763e1de71c908f10553986c6c66adf737"
 
 [update]
 [update.modrinth]
 mod-id = "pNabrMMw"
-version = "UtqbMyTo"
+version = "WTEwHwE4"
