--- a/mods/notenoughcrashes.pw.toml
+++ b/mods/notenoughcrashes.pw.toml
@@ -1,13 +1,13 @@
 name = "Not Enough Crashes"
-filename = "notenoughcrashes-4.2.1+1.19.2-fabric.jar"
+filename = "notenoughcrashes-4.4.4+1.20.1-fabric.jar"
 side = "both"
 
 [download]
-url = "https://cdn.modrinth.com/data/yM94ont6/versions/atahrS1a/notenoughcrashes-4.2.1%2B1.19.2-fabric.jar"
+url = "https://cdn.modrinth.com/data/yM94ont6/versions/ujsdfYWT/notenoughcrashes-4.4.4%2B1.20.1-fabric.jar"
 hash-format = "sha1"
-hash = "7cd215ce242fa95ac91278875b3e8004872cc73a"
+hash = "a171f6135ee56753e8842e26440df50f979f6511"
 
 [update]
 [update.modrinth]
 mod-id = "yM94ont6"
-version = "atahrS1a"
+version = "ujsdfYWT"
