--- a/mods/rei.pw.toml
+++ b/mods/rei.pw.toml
@@ -1,13 +1,13 @@
 name = "Roughly Enough Items (REI)"
-filename = "RoughlyEnoughItems-9.1.595.jar"
+filename = "RoughlyEnoughItems-12.0.634.jar"
 side = "both"
 
 [download]
-url = "https://cdn.modrinth.com/data/nfn13YXA/versions/AE6AqZDy/RoughlyEnoughItems-9.1.595.jar"
+url = "https://cdn.modrinth.com/data/nfn13YXA/versions/yp38DYcK/RoughlyEnoughItems-12.0.634.jar"
 hash-format = "sha1"
-hash = "e4603da9f1b64e672018a359d83125d2c8235d07"
+hash = "7c037f28e51dec9f117e465b34ce7eb3d2fdb0c6"
 
 [update]
 [update.modrinth]
 mod-id = "nfn13YXA"
-version = "AE6AqZDy"
+version = "yp38DYcK"
