--- a/mods/wthit.pw.toml
+++ b/mods/wthit.pw.toml
@@ -1,13 +1,13 @@
 name = "WTHIT"
-filename = "wthit-quilt-5.16.0.jar"
+filename = "wthit-quilt-8.1.1.jar"
 side = "both"
 
 [download]
-url = "https://cdn.modrinth.com/data/6AQIaxuO/versions/ZLSDA0pw/wthit-quilt-5.16.0.jar"
+url = "https://cdn.modrinth.com/data/6AQIaxuO/versions/Q8mlBOGM/wthit-quilt-8.1.1.jar"
 hash-format = "sha1"
-hash = "e61f6ec2052efe0e6dec3587e5380af6bd64965e"
+hash = "fcfcd6c0b5c65f68246043f372fd7e85de615d07"
 
 [update]
 [update.modrinth]
 mod-id = "6AQIaxuO"
-version = "ZLSDA0pw"
+version = "Q8mlBOGM"
