--- a/mods/ae2.pw.toml
+++ b/mods/ae2.pw.toml
@@ -1,13 +1,13 @@
 name = "Applied Energistics 2"
-filename = "appliedenergistics2-fabric-15.0.5-beta.jar"
+filename = "appliedenergistics2-fabric-15.0.7-beta.jar"
 side = "both"
 
 [download]
-url = "https://cdn.modrinth.com/data/XxWD5pD3/versions/TKhjxSIB/appliedenergistics2-fabric-15.0.5-beta.jar"
+url = "https://cdn.modrinth.com/data/XxWD5pD3/versions/Mdn0ka1O/appliedenergistics2-fabric-15.0.7-beta.jar"
 hash-format = "sha1"
-hash = "af5f126d73011bff92bb9515647e57184aed8515"
+hash = "9755c1904c08e8c8f7dfcd4ee14ed5eae5690efe"
 
 [update]
 [update.modrinth]
 mod-id = "XxWD5pD3"
-version = "TKhjxSIB"
+version = "Mdn0ka1O"
