--- a/mods/immediatelyfast.pw.toml
+++ b/mods/immediatelyfast.pw.toml
@@ -1,13 +1,13 @@
 name = "ImmediatelyFast"
-filename = "ImmediatelyFast-1.1.16+1.20.1.jar"
+filename = "ImmediatelyFast-1.1.28+1.20.1.jar"
 side = "client"
 
 [download]
-url = "https://cdn.modrinth.com/data/5ZwdcRci/versions/aptjkgGB/ImmediatelyFast-1.1.16%2B1.20.1.jar"
+url = "https://cdn.modrinth.com/data/5ZwdcRci/versions/EANGsMsP/ImmediatelyFast-1.1.28%2B1.20.1.jar"
 hash-format = "sha1"
-hash = "03e6ec096ad20ada721574e12b0145fe129fbd5a"
+hash = "c9f0dbfeb67c4dd2aad34feef5e9b0a5d2308b78"
 
 [update]
 [update.modrinth]
 mod-id = "5ZwdcRci"
-version = "aptjkgGB"
+version = "EANGsMsP"
