--- a/mods/notenoughcrashes.pw.toml
+++ b/mods/notenoughcrashes.pw.toml
@@ -1,13 +1,13 @@
 name = "Not Enough Crashes"
-filename = "notenoughcrashes-4.4.4+1.20.1-fabric.jar"
+filename = "notenoughcrashes-4.4.6+1.20.1-fabric.jar"
 side = "both"
 
 [download]
-url = "https://cdn.modrinth.com/data/yM94ont6/versions/ujsdfYWT/notenoughcrashes-4.4.4%2B1.20.1-fabric.jar"
+url = "https://cdn.modrinth.com/data/yM94ont6/versions/dUMsjI9u/notenoughcrashes-4.4.6%2B1.20.1-fabric.jar"
 hash-format = "sha1"
-hash = "a171f6135ee56753e8842e26440df50f979f6511"
+hash = "c813ba62ecc96b8d9ad670c057e13ce34f12abaa"
 
 [update]
 [update.modrinth]
 mod-id = "yM94ont6"
-version = "ujsdfYWT"
+version = "dUMsjI9u"
