--- a/mods/ae2.pw.toml
+++ b/mods/ae2.pw.toml
@@ -1,13 +1,13 @@
 name = "Applied Energistics 2"
-filename = "appliedenergistics2-fabric-15.0.7-beta.jar"
+filename = "appliedenergistics2-fabric-15.0.13.jar"
 side = "both"
 
 [download]
-url = "https://cdn.modrinth.com/data/XxWD5pD3/versions/Mdn0ka1O/appliedenergistics2-fabric-15.0.7-beta.jar"
+url = "https://cdn.modrinth.com/data/XxWD5pD3/versions/BUHQD4RJ/appliedenergistics2-fabric-15.0.13.jar"
 hash-format = "sha1"
-hash = "9755c1904c08e8c8f7dfcd4ee14ed5eae5690efe"
+hash = "c5b39d696252a1767da82921469ee5dbdafee493"
 
 [update]
 [update.modrinth]
 mod-id = "XxWD5pD3"
-version = "Mdn0ka1O"
+version = "BUHQD4RJ"
