--- a/mods/cc-tweaked.pw.toml
+++ b/mods/cc-tweaked.pw.toml
@@ -1,13 +1,13 @@
 name = "CC: Tweaked"
-filename = "cc-tweaked-1.20.1-fabric-1.108.0.jar"
+filename = "cc-tweaked-1.20.1-fabric-1.108.3.jar"
 side = "both"
 
 [download]
-url = "https://cdn.modrinth.com/data/gu7yAYhd/versions/LqBYIKkR/cc-tweaked-1.20.1-fabric-1.108.0.jar"
+url = "https://cdn.modrinth.com/data/gu7yAYhd/versions/taNGLI3t/cc-tweaked-1.20.1-fabric-1.108.3.jar"
 hash-format = "sha1"
-hash = "be11906aefeb4af8341662289e01cf0022997963"
+hash = "ec30e90bffccd9471b094d94ce3ea55200f4a071"
 
 [update]
 [update.modrinth]
 mod-id = "gu7yAYhd"
-version = "LqBYIKkR"
+version = "taNGLI3t"
