--- a/mods/rei.pw.toml
+++ b/mods/rei.pw.toml
@@ -1,13 +1,13 @@
 name = "Roughly Enough Items (REI)"
-filename = "RoughlyEnoughItems-12.0.645.jar"
+filename = "RoughlyEnoughItems-12.0.665.jar"
 side = "both"
 
 [download]
-url = "https://cdn.modrinth.com/data/nfn13YXA/versions/kq4TOe4i/RoughlyEnoughItems-12.0.645.jar"
+url = "https://cdn.modrinth.com/data/nfn13YXA/versions/hRM5B1Am/RoughlyEnoughItems-12.0.665.jar"
 hash-format = "sha1"
-hash = "5df98a98e70985ed69f8e0183d876698c65955df"
+hash = "16940571733214d11c008915fca75b1231b3f303"
 
 [update]
 [update.modrinth]
 mod-id = "nfn13YXA"
-version = "kq4TOe4i"
+version = "hRM5B1Am"
