--- a/mods/supermartijn642s-core-lib.pw.toml
+++ b/mods/supermartijn642s-core-lib.pw.toml
@@ -1,13 +1,13 @@
 name = "SuperMartijn642's Core Lib"
-filename = "supermartijn642corelib-1.1.12b-fabric-mc1.20.jar"
+filename = "supermartijn642corelib-1.1.15-fabric-mc1.20.1.jar"
 side = "both"
 
 [download]
-url = "https://cdn.modrinth.com/data/rOUBggPv/versions/jmOcmOvN/supermartijn642corelib-1.1.12b-fabric-mc1.20.jar"
+url = "https://cdn.modrinth.com/data/rOUBggPv/versions/XU7hILi0/supermartijn642corelib-1.1.15-fabric-mc1.20.1.jar"
 hash-format = "sha1"
-hash = "74eb505faf9e25ee88e834f457564add58e3f763"
+hash = "11dc5da24043b7bac8d815b6ceeb0d0b8f540f42"
 
 [update]
 [update.modrinth]
 mod-id = "rOUBggPv"
-version = "jmOcmOvN"
+version = "XU7hILi0"
