--- a/mods/wthit.pw.toml
+++ b/mods/wthit.pw.toml
@@ -1,13 +1,13 @@
 name = "WTHIT"
-filename = "wthit-quilt-8.4.0.jar"
+filename = "wthit-fabric-8.4.0.jar"
 side = "both"
 
 [download]
-url = "https://cdn.modrinth.com/data/6AQIaxuO/versions/SbNRrrGr/wthit-quilt-8.4.0.jar"
+url = "https://cdn.modrinth.com/data/6AQIaxuO/versions/z1T650Hb/wthit-fabric-8.4.0.jar"
 hash-format = "sha1"
-hash = "855744538b4cc0ba72b7d5126a7047d2148297fa"
+hash = "bcdd6d5079f7f8927f8a76532e2264f864a3a662"
 
 [update]
 [update.modrinth]
 mod-id = "6AQIaxuO"
-version = "SbNRrrGr"
+version = "z1T650Hb"
