--- a/mods/ae2.pw.toml
+++ b/mods/ae2.pw.toml
@@ -1,13 +1,13 @@
 name = "Applied Energistics 2"
-filename = "appliedenergistics2-fabric-15.0.13.jar"
+filename = "appliedenergistics2-fabric-15.0.16.jar"
 side = "both"
 
 [download]
-url = "https://cdn.modrinth.com/data/XxWD5pD3/versions/BUHQD4RJ/appliedenergistics2-fabric-15.0.13.jar"
+url = "https://cdn.modrinth.com/data/XxWD5pD3/versions/jgICE67P/appliedenergistics2-fabric-15.0.16.jar"
 hash-format = "sha1"
-hash = "c5b39d696252a1767da82921469ee5dbdafee493"
+hash = "0346efd20e781ec52f7bec61aa0f3eb98a7baf49"
 
 [update]
 [update.modrinth]
 mod-id = "XxWD5pD3"
-version = "BUHQD4RJ"
+version = "jgICE67P"
