--- a/mods/applied-energistics-2-wireless-terminals.pw.toml
+++ b/mods/applied-energistics-2-wireless-terminals.pw.toml
@@ -1,13 +1,13 @@
 name = "Applied Energistics 2 Wireless Terminals"
-filename = "ae2wtlib-15.1.0-fabric.jar"
+filename = "ae2wtlib-15.2.1-fabric.jar"
 side = "both"
 
 [download]
-url = "https://cdn.modrinth.com/data/pNabrMMw/versions/TW3EIXLT/ae2wtlib-15.1.0-fabric.jar"
+url = "https://cdn.modrinth.com/data/pNabrMMw/versions/QewbGM3G/ae2wtlib-15.2.1-fabric.jar"
 hash-format = "sha1"
-hash = "bed7ed067e252d2670eedc34a9d15dfd9a0fe346"
+hash = "180a4e0b62e65930e0aef9dc0380c425e7d5d7b4"
 
 [update]
 [update.modrinth]
 mod-id = "pNabrMMw"
-version = "TW3EIXLT"
+version = "QewbGM3G"
