--- a/mods/cc-tweaked.pw.toml
+++ b/mods/cc-tweaked.pw.toml
@@ -1,13 +1,13 @@
 name = "CC: Tweaked"
-filename = "cc-tweaked-1.20.1-fabric-1.108.3.jar"
+filename = "cc-tweaked-1.20.1-fabric-1.109.2.jar"
 side = "both"
 
 [download]
-url = "https://cdn.modrinth.com/data/gu7yAYhd/versions/taNGLI3t/cc-tweaked-1.20.1-fabric-1.108.3.jar"
+url = "https://cdn.modrinth.com/data/gu7yAYhd/versions/oDSIlQfL/cc-tweaked-1.20.1-fabric-1.109.2.jar"
 hash-format = "sha1"
-hash = "ec30e90bffccd9471b094d94ce3ea55200f4a071"
+hash = "e7e969961b0a19747036cab5edd677343c072ed8"
 
 [update]
 [update.modrinth]
 mod-id = "gu7yAYhd"
-version = "taNGLI3t"
+version = "oDSIlQfL"
