--- a/mods/justenoughbreeding.pw.toml
+++ b/mods/justenoughbreeding.pw.toml
@@ -1,6 +1,6 @@
 name = "Just Enough Breeding (JEBr)"
 filename = "justenoughbreeding-neoforge-1.20.1-1.0.12.jar"
-side = "client"
+side = "both"
 
 [download]
 url = "https://cdn.modrinth.com/data/9Pk89J3g/versions/zDt7oo7I/justenoughbreeding-neoforge-1.20.1-1.0.12.jar"
