--- a/mods/embeddium.pw.toml
+++ b/mods/embeddium.pw.toml
@@ -1,13 +1,13 @@
 name = "Embeddium"
-filename = "embeddium-0.3.4+mc1.20.1.jar"
+filename = "embeddium-0.3.7+mc1.20.1.jar"
 side = "client"
 
 [download]
-url = "https://cdn.modrinth.com/data/sk9rgfiA/versions/pdLkrlJc/embeddium-0.3.4%2Bmc1.20.1.jar"
+url = "https://cdn.modrinth.com/data/sk9rgfiA/versions/yhdMA7ca/embeddium-0.3.7%2Bmc1.20.1.jar"
 hash-format = "sha1"
-hash = "aee89a3a2ac2a56a8155225e9a7df63ee073a526"
+hash = "516681f27193d5756ea05c7a8516c0a59fa3a873"
 
 [update]
 [update.modrinth]
 mod-id = "sk9rgfiA"
-version = "pdLkrlJc"
+version = "yhdMA7ca"
