--- a/mods/mekanism-generators.pw.toml
+++ b/mods/mekanism-generators.pw.toml
@@ -1,13 +1,13 @@
 name = "Mekanism Generators"
-filename = "MekanismGenerators-1.20.1-10.4.5.19.jar"
+filename = "MekanismGenerators-1.20.1-10.4.6.20.jar"
 side = "both"
 
 [download]
-url = "https://cdn.modrinth.com/data/OFVYKsAk/versions/n1IGOKuu/MekanismGenerators-1.20.1-10.4.5.19.jar"
+url = "https://cdn.modrinth.com/data/OFVYKsAk/versions/1E44ANCP/MekanismGenerators-1.20.1-10.4.6.20.jar"
 hash-format = "sha1"
-hash = "74b26f289e2a129a7a328e5344e6e5de7cd2350d"
+hash = "f84eb089018308df6260a87cadc808518343dcce"
 
 [update]
 [update.modrinth]
 mod-id = "OFVYKsAk"
-version = "n1IGOKuu"
+version = "1E44ANCP"
