--- a/mods/wthit.pw.toml
+++ b/mods/wthit.pw.toml
@@ -1,13 +1,13 @@
 name = "WTHIT"
-filename = "wthit-forge-8.7.2.jar"
+filename = "wthit-forge-8.7.3.jar"
 side = "both"
 
 [download]
-url = "https://cdn.modrinth.com/data/6AQIaxuO/versions/AejVDx3V/wthit-forge-8.7.2.jar"
+url = "https://cdn.modrinth.com/data/6AQIaxuO/versions/4gH9aS07/wthit-forge-8.7.3.jar"
 hash-format = "sha1"
-hash = "f6fbd28d3abdaff316461682c23da5f5aa2c8855"
+hash = "8ea2387547ece867a74b996687787ad9dfdf5cf3"
 
 [update]
 [update.modrinth]
 mod-id = "6AQIaxuO"
-version = "AejVDx3V"
+version = "4gH9aS07"
